Removes purple theme colors, and fixes spacing issue in sidenav (#544)
* remove purple theme colors, and fix spacing issue in sidenav

* linting

--- a/static/scss/sideDrawer.scss
+++ b/static/scss/sideDrawer.scss
@@ -1,5 +1,9 @@
 $item-color: rgba(255,255,255,.7);
 
+:not(.mdc-list--non-interactive) > .mdc-list-item--activated::before, :not(.mdc-list--non-interactive) > .mdc-list-item--activated::after {
+  background: none;
+}
+
 .mdc-drawer--temporary .mdc-drawer__drawer {
   background: $darkgray-bg;
   color: white;
@@ -27,10 +31,10 @@ $item-color: rgba(255,255,255,.7);
     .mdc-list-item {
       font-size: .95rem;
       color: $item-color;
-      padding: 0 24px;
+      padding: 10px 24px;
       font-weight: 400;
-      height: 42px;
-      line-height: 1.4;
+      height: auto;
+      line-height: 1.2;
     }
 
     a:hover {
